# h-bot10000

./: .dockerignore  .gitignore  Dockerfile  additions.py  default.py  fly.toml  index.py  pyproject.toml  readme.md  requirements.txt  run.sh  swap.sh  swapenable.sh
.github/ISSUE_TEMPLATE/: ai-bug-report.md  forbidden-letter-bug-report.md  h-bug-report.md
assets/: copypasta.txt
helper/: mentions.py  oauthvalidater.py  reddit.py  usefulcomponents.py
src/: aireplier.py  defaultreplier.py  forbiddenletter.py  topposts.py
